--- a/hackaton/things/things1.html
+++ b/hackaton/things/things1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Предмет</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="styleitem.css">
   </head>
   <body>
