--- a/hackathon_2/things.html
+++ b/hackathon_2/things.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Машины</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/thingsstyle.css">
   </head>
   <body>
       <header>
@@ -17,11 +18,112 @@
         </nav>
         <div class="profil">
           <img src="images/profil.jpg" alt="profil">
-          <a href="#"><h3>MIRON</h3></a>
+          <a href="index.html"><h3>MIRON</h3></a>
         </div>
       </header>
       <main>
-
+        <div class="namePages">
+          <h1>СПИСОК МАШИН</h1>
+        </div>
+        <div class="box">
+          <div class="content">
+            <div class="car1">
+              <div class="type">
+                <h2>Тип</h2>
+              </div>
+              <div class="ID">
+                <h2>ID</h2>
+              </div>
+              <div class="status">
+                <h2>Статус</h2>
+              </div>
+              <div class="time">
+                <h2>Время</h2>
+              </div>
+            </div>
+            <div class="car">
+              <img class="type" src="images/car.png" alt="carIcon">
+              <div class="Number">
+                <h2>1</h2>
+              </div>
+              <div class="status">
+                <h2>В работе</h2>
+              </div>
+              <div class="time">
+                <h2>5:15</h2>
+              </div>
+            </div>
+            <div class="car">
+              <img class="type"  src="images/car.png" alt="carIcon">
+              <div class="Number">
+                <h2>1</h2>
+              </div>
+              <div class="status">
+                <h2>В работе</h2>
+              </div>
+              <div class="time">
+                <h2>5:15</h2>
+              </div>
+            </div>
+            <div class="car">
+              <img class="type"  src="images/car.png" alt="carIcon">
+              <div class="Number">
+                <h2>1</h2>
+              </div>
+              <div class="status">
+                <h2>В работе</h2>
+              </div>
+              <div class="time">
+                <h2>5:15</h2>
+              </div>
+            </div>
+            <div class="car">
+              <img class="type" src="images/car.png" alt="carIcon">
+              <div class="Number">
+                <h2>1</h2>
+              </div>
+              <div class="status">
+                <h2>В работе</h2>
+              </div>
+              <div class="time">
+                <h2>5:15</h2>
+              </div>
+            </div>
+            <div class="car">
+              <img class="type"  src="images/car.png" alt="carIcon">
+              <div class="Number">
+                <h2>1</h2>
+              </div>
+              <div class="status">
+                <h2>В работе</h2>
+              </div>
+              <div class="time">
+                <h2>5:15</h2>
+              </div>
+            </div>
+          </div>
+          <div class="filters">
+            <h2>ФИЛЬТРЫ</h2>
+            <div class="brokeCarFilters">
+              <h3>Сломанные</h3>
+              <div class="center">
+                <input type="checkbox">
+              </div>
+            </div>
+            <div class="serverCarFilters">
+              <h3>Серверная помощь</h3>
+              <div class="center">
+                <input type="checkbox">
+              </div>
+            </div>
+            <div class="workCarFilters">
+              <h3>Работающие</h3>
+              <div class="center">
+                <input type="checkbox">
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         <span>&copy Created 2019</span>
