--- a/hackathon_2/index.html
+++ b/hackathon_2/index.html
@@ -92,7 +92,7 @@
         </div>
       </main>
       <footer>
-        <span>&copy Created 2019</span>
+        <span>&copy; Created 2019</span>
       </footer>
   </body>
 </html>
