--- a/hackathon_2/things.html
+++ b/hackathon_2/things.html
@@ -28,78 +28,112 @@
         <div class="box">
           <div class="content">
             <div class="car1">
-              <div class="type">
-                <h2>Тип</h2>
-              </div>
-              <div class="ID">
-                <h2>ID</h2>
-              </div>
-              <div class="status">
-                <h2>Статус</h2>
-              </div>
-              <div class="time">
-                <h2>Время</h2>
-              </div>
+              <table>
+                <tr>
+                  <td class="type">
+                    <h2>Тип</h2>
+                  </td>
+                  <td class="ID">
+                    <h2>ID</h2>
+                  </td>
+                  <td class="status">
+                    <h2>Статус</h2>
+                  </td>
+                  <td class="time">
+                    <h2>Время</h2>
+                  </td>
+                </tr>
+              </table>
             </div>
             <div class="car">
-              <img class="type" src="images/car.png" alt="carIcon">
-              <div class="Number">
-                <h2>1</h2>
-              </div>
-              <div class="status">
-                <h2>В работе</h2>
-              </div>
-              <div class="time">
-                <h2>5:15</h2>
-              </div>
+              <table>
+                <tr>
+                  <td class="type">
+                    <img src="images/car.png" alt="carIcon">
+                  </td>
+                  <td class="ID">
+                    <h2>1</h2>
+                  </td>
+                  <td class="status">
+                    <h2>В работе</h2>
+                  </td>
+                  <td class="time">
+                    <h2>5:15</h2>
+                  </td>
+                </tr>
+              </table>
             </div>
             <div class="car">
-              <img class="type"  src="images/car.png" alt="carIcon">
-              <div class="Number">
-                <h2>1</h2>
-              </div>
-              <div class="status">
-                <h2>В работе</h2>
-              </div>
-              <div class="time">
-                <h2>5:15</h2>
-              </div>
+              <table>
+                <tr>
+                  <td class="type">
+                    <img src="images/car.png" alt="carIcon">
+                  </td>
+                  <td class="ID">
+                    <h2>1</h2>
+                  </td>
+                  <td class="status">
+                    <h2>В работе</h2>
+                  </td>
+                  <td class="time">
+                    <h2>5:15</h2>
+                  </td>
+                </tr>
+              </table>
             </div>
             <div class="car">
-              <img class="type"  src="images/car.png" alt="carIcon">
-              <div class="Number">
-                <h2>1</h2>
-              </div>
-              <div class="status">
-                <h2>В работе</h2>
-              </div>
-              <div class="time">
-                <h2>5:15</h2>
-              </div>
+              <table>
+                <tr>
+                  <td class="type">
+                    <img src="images/car.png" alt="carIcon">
+                  </td>
+                  <td class="ID">
+                    <h2>1</h2>
+                  </td>
+                  <td class="status">
+                    <h2>В работе</h2>
+                  </td>
+                  <td class="time">
+                    <h2>5:15</h2>
+                  </td>
+                </tr>
+              </table>
             </div>
             <div class="car">
-              <img class="type" src="images/car.png" alt="carIcon">
-              <div class="Number">
-                <h2>1</h2>
-              </div>
-              <div class="status">
-                <h2>В работе</h2>
-              </div>
-              <div class="time">
-                <h2>5:15</h2>
-              </div>
+              <table>
+                <tr>
+                  <td class="type">
+                    <img src="images/car.png" alt="carIcon">
+                  </td>
+                  <td class="ID">
+                    <h2>1</h2>
+                  </td>
+                  <td class="status">
+                    <h2>В работе</h2>
+                  </td>
+                  <td class="time">
+                    <h2>5:15</h2>
+                  </td>
+                </tr>
+              </table>
             </div>
             <div class="car">
-              <img class="type"  src="images/car.png" alt="carIcon">
-              <div class="Number">
-                <h2>1</h2>
-              </div>
-              <div class="status">
-                <h2>В работе</h2>
-              </div>
-              <div class="time">
-                <h2>5:15</h2>
-              </div>
+              <table>
+                <tr>
+                  <td class="type">
+                    <img src="images/car.png" alt="carIcon">
+                  </td>
+                  <td class="ID">
+                    <h2>1</h2>
+                  </td>
+                  <td class="status">
+                    <h2>В работе</h2>
+                  </td>
+                  <td class="time">
+                    <h2>5:15</h2>
+                  </td>
+                </tr>
+              </table>
             </div>
           </div>
           <div class="filters">
