--- a/hackathon_2/things.html
+++ b/hackathon_2/things.html
@@ -27,114 +27,20 @@
         </div>
         <div class="box">
           <div class="content">
-            <div class="car1">
               <table>
                 <tr>
-                  <td class="type">
-                    <h2>Тип</h2>
-                  </td>
-                  <td class="ID">
-                    <h2>ID</h2>
-                  </td>
-                  <td class="status">
-                    <h2>Статус</h2>
-                  </td>
-                  <td class="time">
-                    <h2>Время</h2>
-                  </td>
+                  <th>Тип</th>
+                  <th>ID</th>
+                  <th>Состояние</th>
+                  <th>Время</th>
                 </tr>
-              </table>
-            </div>
-            <div class="car">
-              <table>
                 <tr>
-                  <td class="type">
-                    <img src="images/car.png" alt="carIcon">
-                  </td>
-                  <td class="ID">
-                    <h2>1</h2>
-                  </td>
-                  <td class="status">
-                    <h2>В работе</h2>
-                  </td>
-                  <td class="time">
-                    <h2>5:15</h2>
-                  </td>
+                  <td><img src="images/car.png" alt="car"> </td>
+                  <td>ячейка тела таблицы</td>
+                  <td>ячейка тела таблицы</td>
+                  <td>ячейка тела таблицы</td>
                 </tr>
               </table>
-            </div>
-            <div class="car">
-              <table>
-                <tr>
-                  <td class="type">
-                    <img src="images/car.png" alt="carIcon">
-                  </td>
-                  <td class="ID">
-                    <h2>1</h2>
-                  </td>
-                  <td class="status">
-                    <h2>В работе</h2>
-                  </td>
-                  <td class="time">
-                    <h2>5:15</h2>
-                  </td>
-                </tr>
-              </table>
-            </div>
-            <div class="car">
-              <table>
-                <tr>
-                  <td class="type">
-                    <img src="images/car.png" alt="carIcon">
-                  </td>
-                  <td class="ID">
-                    <h2>1</h2>
-                  </td>
-                  <td class="status">
-                    <h2>В работе</h2>
-                  </td>
-                  <td class="time">
-                    <h2>5:15</h2>
-                  </td>
-                </tr>
-              </table>
-            </div>
-            <div class="car">
-              <table>
-                <tr>
-                  <td class="type">
-                    <img src="images/car.png" alt="carIcon">
-                  </td>
-                  <td class="ID">
-                    <h2>1</h2>
-                  </td>
-                  <td class="status">
-                    <h2>В работе</h2>
-                  </td>
-                  <td class="time">
-                    <h2>5:15</h2>
-                  </td>
-                </tr>
-              </table>
-            </div>
-            <div class="car">
-              <table>
-                <tr>
-                  <td class="type">
-                    <img src="images/car.png" alt="carIcon">
-                  </td>
-                  <td class="ID">
-                    <h2>1</h2>
-                  </td>
-                  <td class="status">
-                    <h2>В работе</h2>
-                  </td>
-                  <td class="time">
-                    <h2>5:15</h2>
-                  </td>
-                </tr>
-              </table>
-            </div>
           </div>
           <div class="filters">
             <h2>ФИЛЬТРЫ</h2>
