--- a/hackathon_2/things.html
+++ b/hackathon_2/things.html
@@ -29,17 +29,21 @@
           <div class="content">
               <table>
                 <tr>
-                  <th>Тип</th>
-                  <th>ID</th>
-                  <th>Состояние</th>
-                  <th>Время</th>
+                  <th class="type">Тип</th>
+                  <th class="id">ID</th>
+                  <th class="stat">Состояние</th>
+                  <th class="time">Время</th>
+                  <th class="model">Модель</th>
+                  <th class="info">Информация</th>
                 </tr>
-                <tr>
-                  <td><img src="images/car.png" alt="car"> </td>
-                  <td>ячейка тела таблицы</td>
-                  <td>ячейка тела таблицы</td>
-                  <td>ячейка тела таблицы</td>
-                </tr>
+                  <tr>
+                    <td><img src="images/car.png" alt="car"></td>
+                    <td>ячейка тела таблицы</td>
+                    <td>ячейка тела таблицы</td>
+                    <td>ячейка тела таблицы</td>
+                    <td>ячейка тела таблицы</td>
+                    <td><a href="profil.html"><img src="images/info.png" alt="car"></a></td>
+                  </tr>
               </table>
           </div>
           <div class="filters">
