--- a/hackathon_2/index.html
+++ b/hackathon_2/index.html
@@ -12,7 +12,7 @@
         </div>
         <nav class="menu">
           <ul>
-            <li><span><a href="#">ДОБАВИТЬ</a></span></li>
+            <li><span><a href="registration.html">ДОБАВИТЬ</a></span></li>
           </ul>
         </nav>
         <div class="profil">
