--- a/hackathon_2/profil.html
+++ b/hackathon_2/profil.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Профиль</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/profil.css">
   </head>
   <body>
       <header>
@@ -12,7 +13,7 @@
         </div>
         <nav class="menu">
           <ul>
-            <li><span><a href="#">ДОБАВИТЬ</a></span></li>
+            <li><span><a href="registration.html">ДОБАВИТЬ</a></span></li>
           </ul>
         </nav>
         <div class="profil">
@@ -21,7 +22,57 @@
         </div>
       </header>
       <main>
-
+        <div class="contentProfil">
+          <div class="leftProfil">
+            <div class="nameCar">
+              <h3>#333</h3>
+            </div>
+            <div class="imagesCar">
+              <img src="images/car3.jpg" alt="car">
+            </div>
+            <div class="infoCar">
+              <h2>ВЫЯВЛЕННЫЕ ПРОБЛЕМЫ</h2>
+              <ul>
+                <li>Поменять масло</li>
+                <li>Купить двигатель</li>
+                <li>Уехать в закат</li>
+              </ul>
+            </div>
+          </div>
+          <div class="rightProfil">
+            <div class="infoRightCar">
+              <h2>СТАТУС</h2>
+              <div class="infoRight">
+                <span class="statusName">Общее состояние</span>
+                <span class="statusCar">Работает</span>
+              </div>
+              <div class="infoRight">
+                <span class="statusName">Состояние тормозных колодок</span>
+                <span class="statusCar">100%</span>
+              </div>
+              <div class="infoRight">
+                <span class="statusName">Состояние двигателя</span>
+                <span class="statusCar">Работает</span>
+              </div>
+              <div class="infoRight">
+                <span class="statusName">Давление масла</span>
+                <span class="statusCar">70%</span>
+              </div>
+              <div class="infoRight">
+                <span class="statusName">Температура двигателя</span>
+                <span class="statusCar">140&#176;</span>
+              </div>
+              <div class="infoRight">
+                <span class="statusName">Состояние трансмиссии</span>
+                <span class="statusCar">Работает</span>
+              </div>
+              <div class="infoRight">
+                <span class="statusName">Ошибки</span>
+                <span class="statusCar">Отсутствуют</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         <span>&copy; Created 2019</span>
