--- a/hackathon_2/things.html
+++ b/hackathon_2/things.html
@@ -12,9 +12,7 @@
           <h1>Платформа</h1>
         </div>
         <nav class="menu">
-          <ul>
-            <li><span><a href="#">ДОБАВИТЬ</a></span></li>
-          </ul>
+            <button class="addThings"type="button" name="button">ДОБАВИТЬ</button>
         </nav>
         <div class="profil">
           <img src="images/profil.jpg" alt="profil">
@@ -28,7 +26,7 @@
         <div class="box">
           <div class="content">
               <table>
-                <tr>
+                <tr class="">
                   <th class="type">Тип</th>
                   <th class="id">ID</th>
                   <th class="stat">Состояние</th>
