--- a/hackathon_2/profil.html
+++ b/hackathon_2/profil.html
@@ -12,13 +12,16 @@
           <h1>Платформа</h1>
         </div>
         <nav class="menu">
-          <ul>
-            <li><span><a href="registration.html">ДОБАВИТЬ</a></span></li>
-          </ul>
+          <div class="formAdd">
+            <input type="text" name="" value="">
+          </div>
+          <form class="" action="index.html" method="post">
+            <button class="addThings"  type="button" name="button">ДОБАВИТЬ ID</button>
+          </form>
         </nav>
         <div class="profil">
           <img src="images/profil.jpg" alt="profil">
-          <a href="#"><h3>MIRON</h3></a>
+          <a href="index.html"><h3>MIRON</h3></a>
         </div>
       </header>
       <main>
