--- a/hackathon_2/index.html
+++ b/hackathon_2/index.html
@@ -11,9 +11,12 @@
           <h1>Платформа</h1>
         </div>
         <nav class="menu">
-          <ul>
-            <li><span><a href="registration.html">ДОБАВИТЬ</a></span></li>
-          </ul>
+          <div class="formAdd">
+            <input type="text" name="" value="">
+          </div>
+          <form class="" action="index.html" method="post">
+            <button class="addThings"  type="button" name="button">ДОБАВИТЬ ID</button>
+          </form>
         </nav>
         <div class="profil">
           <img src="images/profil.jpg" alt="profil">
