--- a/hackathon_2/things.html
+++ b/hackathon_2/things.html
@@ -12,7 +12,12 @@
           <h1>Платформа</h1>
         </div>
         <nav class="menu">
-            <button class="addThings"type="button" name="button">ДОБАВИТЬ</button>
+          <div class="formAdd">
+            <input type="text" name="" value="">
+          </div>
+          <form class="" action="index.html" method="post">
+            <button class="addThings"  type="button" name="button">ДОБАВИТЬ ID</button>
+          </form>
         </nav>
         <div class="profil">
           <img src="images/profil.jpg" alt="profil">
