--- a/hackathon_2/index.html
+++ b/hackathon_2/index.html
@@ -90,6 +90,12 @@
                 <h3>Важность - 2</h3>
                 <a href="#"><h4>ПОДРОБНЕЕ</h4></a>
               </div>
+              <div class="break">
+                <h2>Машина - #15</h2>
+                <h3>Поломка - масло</h3>
+                <h3>Важность - 2</h3>
+                <a href="#"><h4>ПОДРОБНЕЕ</h4></a>
+              </div>   
             </div>
           </div>
         </div>
